--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,11 +148,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
+       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
+       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greet_employees()"
    ]
